--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,9 @@
     <title>Peachers for Parents and Teachers!</title>
     <center>
     <img src="./images/toplogo.png" width="75%" height="75%"><br>
-    <img src="./images/pta.png"><sup>TM</sup>
+    <img src="./images/teach.png">
+    <br>
+
 
     <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -19,8 +21,14 @@
 </head>
 <body>
 
+<div id='intro'>Welcome to Peacher, an interactive program designed to maintain communication between parents and teachers. For parents - you can check grades, make sure your child is keeping up with assignments, and contact your child's teachers. For teachers - Peacher gives you the ability to submit grades, post assignments, and check class averages.</div>
 
+<div id='login'>Please log in to continue.<br>
+Username: <input type='text'></input>Password: <input type='text'></input>
+<button id='log'>Log in</button><br><br></div>
+<div id='signUp'>New User? Sign up for a new account!<button id='sign up'>sign up</button></div>
     <script>
     </script>
+        <img src="./images/pta.png"><sup>TM</sup>
 </body>
 </html>
