--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <title>Peachers for Parents and Teachers!</title>
     <center>
     <img src="./images/toplogo.png" width="75%" height="75%"><br>
-    <img src="./images/teach.png">
+    <img src="./images/teach.png"><img src="https://image.shutterstock.com/z/stock-vector-peach-cartoon-208934857.jpg" width="10%" height="10%">
     <br>
 
 
@@ -21,8 +21,8 @@
 </head>
 <body>
 
-<div id='intro'>Welcome to Peacher, an interactive program designed to maintain communication between parents and teachers. For parents - you can check grades, make sure your child is keeping up with assignments, and contact your child's teachers. For teachers - Peacher gives you the ability to submit grades, post assignments, and check class averages.</div>
-<img src="https://image.shutterstock.com/z/stock-vector-peach-cartoon-208934857.jpg" width="25%" height="25%">
+<div id='intro'>Welcome to Peacher for parents and teachers! Peacher is an interactive program designed to maintain communication between parents and teachers. For parents - you can check grades, make sure your child is keeping up with assignments, and contact your child's teachers. For teachers - Peacher gives you the ability to submit grades, post assignments, and check class averages.</div>
+
 
 <div id='signUp'>New User? Sign up for a new account!<button id='sign up'>sign up</button></div>
 <script src="fejs.js"></script>
@@ -132,8 +132,20 @@
                 </div>  
             </section>
         </div>
-    </body>
-</html>
+<!--Footer-->
+    <footer class="page-footer center-on-small-only primary-color-dark" id="footy">
+
+        <!--Footer Links-->
+        <div class="container-fluid">
+  <img src="./images/toplogo.png"class="img-responsive" max-width="100%">
+                Contact Info: <br>
+                here's some contact bullshit
+        </div>
+        <!--/.Footer Links-->
+
+
+    </footer>
+    <!--/.Footer-->
 
 
 </body>
