--- a/public/index.html
+++ b/public/index.html
@@ -132,16 +132,69 @@
                 </div>  
             </section>
         </div>
+
 <!--Footer-->
     <footer class="page-footer center-on-small-only primary-color-dark" id="footy">
 
-        <!--Footer Links-->
-        <div class="container-fluid">
-  <img src="./images/toplogo.png"class="img-responsive" max-width="100%">
-                Contact Info: <br>
-                here's some contact bullshit
-        </div>
-        <!--/.Footer Links-->
+<div>
+	<section id="contact" style="">
+            <div class="container">
+                <div class="row">
+                    <div class="about_our_company" style="margin-bottom: 20px;">
+                        <h1 style="color:#fff;">Write Your Message</h1>
+                        <div class="titleline-icon"></div>
+                        <p style="color:#fff;">Lorem Ipsum is simply dummy text of the printing and typesetting </p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-8">
+                        <form name="sentMessage" id="contactForm" novalidate="">
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        <input type="text" class="form-control" placeholder="Your Name *" id="name" required="" data-validation-required-message="Please enter your name.">
+                                        <p class="help-block text-danger"></p>
+                                    </div>
+                                    <div class="form-group">
+                                        <input type="email" class="form-control" placeholder="Your Email *" id="email" required="" data-validation-required-message="Please enter your email address.">
+                                        <p class="help-block text-danger"></p>
+                                    </div>
+                                    <div class="form-group">
+                                        <input type="tel" class="form-control" placeholder="Your Phone *" id="phone" required="" data-validation-required-message="Please enter your phone number.">
+                                        <p class="help-block text-danger"></p>
+                                    </div>
+                                </div>
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        <textarea class="form-control" placeholder="Your Message *" id="message" required="" data-validation-required-message="Please enter a message."></textarea>
+                                        <p class="help-block text-danger"></p>
+                                    </div>
+                                </div>
+                                <div class="clearfix"></div>
+                                <div class="col-lg-12 text-center">
+                                    <div id="success"></div>
+                                    <button type="submit" class="btn btn-xl get">Send Message</button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                    <div class="col-md-4">
+                        <p style="color:#fff;">
+                            <strong><i class="fa fa-map-marker"></i> Address</strong><br>
+                            1216/Mirpur_10 Beach, Dhaka(Bangladesh)
+                        </p>
+                        <p style="color:#fff;"><strong><i class="fa fa-phone"></i> Phone Number</strong><br>
+                            (+8801)7123456</p>
+                        <p style="color:#fff;">
+                            <strong><i class="fa fa-envelope"></i>  Email Address</strong><br>
+                            Email@info.com</p>
+                        <p></p>
+                    </div>
+                </div>
+            </div>
+            </div>
+        </section>
+
 
 
     </footer>
