--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Peachers for Parents and Teachers!</title>
     <center>
-    <img src="./images/toplogo.png" width="75%" height="75%"><br>
+    <img src="./images/peachertrans.png" width="75%" height="75%"><br>
     <img src="./images/teach.png"><img src="https://image.shutterstock.com/z/stock-vector-peach-cartoon-208934857.jpg" width="10%" height="10%">
     <br>
 
@@ -23,11 +23,9 @@
 
 <div id='intro'>Welcome to Peacher for parents and teachers! Peacher is an interactive program designed to maintain communication between parents and teachers. For parents - you can check grades, make sure your child is keeping up with assignments, and contact your child's teachers. For teachers - Peacher gives you the ability to submit grades, post assignments, and check class averages.</div>
 
-
-<div id='signUp'>New User? Sign up for a new account!<button id='sign up'>sign up</button></div>
 <script src="fejs.js"></script>
     </script>
-        <img src="./images/pta.png"><sup>TM</sup>
+        <img src="./images/ptatrans.png"><sup>TM</sup>
 
 
 
@@ -140,13 +138,12 @@
 	<section id="contact" style="">
             <div class="container">
                 <div class="row">
-                    <div class="about_our_company" style="margin-bottom: 20px;">
-                        <h1 style="color:#fff;">Write Your Message</h1>
-                        <div class="titleline-icon"></div>
-                        <p style="color:#fff;">Lorem Ipsum is simply dummy text of the printing and typesetting </p>
-                    </div>
+                    <div class="picture" style="margin-bottom: 20px" style="margin-left: 20px"><img src="./images/peachertrans.png" width="30%" height="30%" style="float: left"></div>
+                    <div class="col-md-5" style="margin-bottom: 20px;">
+                        <h1 style="color:#fff;">Write A Message to Your School</h1><br><br>
                 </div>
                 <div class="row">
+                  
                     <div class="col-md-8">
                         <form name="sentMessage" id="contactForm" novalidate="">
                             <div class="row">
