added student/teacher profiles

--- a/public/index.html
+++ b/public/index.html
@@ -61,6 +61,8 @@
                                     <label for="password" class="youpasswd"> Your password </label>
                                     <input id="password" name="password" required="required" type="password" placeholder="eg. X8df!90EO" /> 
                                 </p>
+                                <p>
+                                    <label for="teachpar" class="teachparr">Teacher: </label><input type="checkbox"></input> <label for="parteach" class="parrteach">Student/Parent: </label><input type="checkbox"></input> 
                                 <p class="keeplogin"> 
 									<input type="checkbox" name="loginkeeping" id="loginkeeping" value="loginkeeping" /> 
 									<label for="loginkeeping">Keep me logged in</label>
