added JS and stuffs

--- a/public/index.html
+++ b/public/index.html
@@ -62,13 +62,13 @@
                                     <input id="password" name="password" required="required" type="password" placeholder="eg. X8df!90EO" /> 
                                 </p>
                                 <p>
-                                    <label for="teachpar" class="teachparr">Teacher: </label><input type="checkbox"></input> <label for="parteach" class="parrteach">Student/Parent: </label><input type="checkbox"></input> 
+                                    <label for="teachpar" class="teachparr" id="isTeacher">Teacher: </label><input type="checkbox"></input> <label for="parteach" class="parrteach">Student/Parent: </label><input type="checkbox" id="isParent"></input> 
                                 <p class="keeplogin"> 
 									<input type="checkbox" name="loginkeeping" id="loginkeeping" value="loginkeeping" /> 
 									<label for="loginkeeping">Keep me logged in</label>
 								</p>
                                 <p class="login button"> 
-                                    <input type="submit" value="Login" /> 
+                                    <input id='log' type="submit" value="Login" /> 
 								</p>
                                 <p class="change_link">
 									Not a member yet ?
