--- a/public/parentprof.html
+++ b/public/parentprof.html
@@ -45,7 +45,7 @@
         <div class="collapse navbar-collapse navbar-ex1-collapse">
           <ul class="nav navbar-nav js-nav-add-active-class">
             <li><a href="./index.html">Home</a></li>
-            <li class="active"><a href="./studentprof.html">Profile</a></li>
+            <li class="active"><a href="./parentprof.html">Profile</a></li>
             <li><a href="/buy.html">Class</a></li>
             <li><a href="/svstrike.html">Settings</a></li>
               </ul>
