added classes to Divs

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
 </head>
 <body>
 
-    <div id='intro'>
+    <div id='intro' class='divvy'>
         Welcome to Peacher for parents and teachers! Peacher is an interactive program designed to maintain communication between parents and teachers. For parents - you can check grades, make sure your child is keeping up with assignments, and contact your child's teachers. For teachers - Peacher gives you the ability to submit grades, post assignments, and check class averages.
         <br><br>
           <img src="./images/ptatrans.png"><sup>TM</sup>
