--- a/public/parentprof.html
+++ b/public/parentprof.html
@@ -16,7 +16,7 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 <link rel="stylesheet" href="styles.css">
 
-<div class="container">
+<!--<div class="container">
   <!-- Topper w/ logo -->
   <div class="row hidden-xs topper">
     <div class="col-xs-7 col-sm-7">
@@ -62,9 +62,7 @@
 
 
 <body>
-
-
-
+<div id='mainDiv' class='divvy'> Yo ! This is where some shit will go, bro! </div>
     <center>
     <!--<img src="./images/peachertrans.png" width="75%" height="75%"><br>-->
     <img src="./images/peachErty.png" width="50%" height="50%">
