centered sum stuff

--- a/public/parentprof.html
+++ b/public/parentprof.html
@@ -61,7 +61,7 @@
 </head>
 
 
-<body>
+<body><center>
 <div id='mainDiv' class='divvy'> Yo ! This is where some shit will go, bro! </div>
     <center>
     <!--<img src="./images/peachertrans.png" width="75%" height="75%"><br>-->
@@ -70,7 +70,7 @@
 
 
 
-
+</center>
 <!--Footer-->
     <footer class="page-footer center-on-small-only primary-color-dark" id="footy">
 
