--- a/public/teacherprof.html
+++ b/public/teacherprof.html
@@ -3,10 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Peachers for Parents and Teachers!</title>
-    <center>
-    <img src="./images/peachertrans.png" width="75%" height="75%"><br>
-    <img src="./images/peachErty.png" width="50%" height="50%">
-    <br>
+
 
 
     <!-- Latest compiled and minified CSS -->
@@ -19,22 +16,60 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 <link rel="stylesheet" href="styles.css">
 
-<nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="#">WebSiteName</a>
+<!--<div class="container">
+  <!-- Topper w/ logo -->
+  <div class="row hidden-xs topper">
+    <div class="col-xs-7 col-sm-7">
+      <a href="//convertify.io"><img am-TopLogo alt="SECUREVIEW"  src="./images/peachertrans.png" class="img-responsive"></a>
     </div>
-    <ul class="nav navbar-nav">
-      <li class="active"><a href="#">Home</a></li>
-      <li><a href="#">Page 1</a></li>
-      <li><a href="#">Page 2</a></li>
-      <li><a href="#">Page 3</a></li>
-    </ul>
-  </div>
-</nav>
-</head>
-<body>
+    <div class="col-xs-5 col-xs-offset-1 col-sm-5 col-sm-offset-0 text-right ">
+    </div>
+  </div> <!-- End Topper -->
+  <!-- Navigation -->
+  <div class="row">
+    <nav class="navbar navbar-inverse" role="navigation">
+      <div class="container">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand visible-xs-inline-block nav-logo" href="/"><img src="./images/peachertrans.png" class="img-responsive" alt=""></a>
+        </div>
 
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse navbar-ex1-collapse">
+          <ul class="nav navbar-nav js-nav-add-active-class">
+            <li><a href="./index.html">Home</a></li>
+            <li class="active"><a href="./parentprof.html">Profile</a></li>
+            <li><a href="/buy.html">Class</a></li>
+            <li><a href="/svstrike.html">Settings</a></li>
+              </ul>
+            </li>
+          </ul>
+          <ul class="nav navbar-nav navbar-right hidden-xs">
+          </ul>
+        </div><!-- /.navbar-collapse -->
+      </div>
+    </nav>
+  </div>
+</div>
+</head>
+
+
+<body><center>
+<div id='mainDiv' class='divvy'> Yo ! This is where some shit will go, bro! </div>
+    <center>
+    <!--<img src="./images/peachertrans.png" width="75%" height="75%"><br>-->
+    <img src="./images/peachErty.png" width="50%" height="50%">
+    <br>
+
+
+
+</center>
 <!--Footer-->
     <footer class="page-footer center-on-small-only primary-color-dark" id="footy">
 
