--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,6 @@
 <head>
     <meta charset="UTF-8">
     <title>Peachers for Parents and Teachers!</title>
-    <center>
-        <img src="./images/peachertrans.png" width="75%" height="75%"><br>
-        <img src="./images/peachErty.png" width="50%" height="50%">
-        <br>
 
 
         <!-- Latest compiled and minified CSS -->
@@ -28,7 +24,10 @@
                         <link rel="stylesheet" href="styles.css">
 </head>
 
-<body>
+<body><center>
+            <img src="./images/peachertrans.png" width="75%" height="75%"><br>
+        <img src="./images/peachErty.png" width="50%" height="50%">
+        <br>
 
     <div id='intro' class='divvy'>
         Welcome to Peacher for parents and teachers! Peacher is an interactive program designed to maintain communication between
@@ -39,57 +38,7 @@
         <img src="./images/ptatrans.png"><sup>TM</sup>
     </div>
 
-
-
-<<<<<<< HEAD
-=======
-      
-
-
-<!--[if lt IE 7 ]> <html lang="en" class="no-js ie6 lt8"> <![endif]-->
-<!--[if IE 7 ]>    <html lang="en" class="no-js ie7 lt8"> <![endif]-->
-<!--[if IE 8 ]>    <html lang="en" class="no-js ie8 lt8"> <![endif]-->
-<!--[if IE 9 ]>    <html lang="en" class="no-js ie9"> <![endif]-->
-<!--[if (gt IE 9)|!(IE)]><!--> 
-        <!-- <meta charset="UTF-8" /> -->
-        <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">  -->
-        <!-- <title>Login and Registration Form with HTML5 and CSS3</title> -->
-		<!-- <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" /> -->
-		<!-- <link href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet"> -->
-
-        <div class="container">
-            <section>				
-                <div id="container_demo" >
-                    <!-- hidden anchor to stop jump http://www.css3create.com/Astuce-Empecher-le-scroll-avec-l-utilisation-de-target#wrap4  -->
-                    <a class="hiddenanchor" id="toregister"></a>
-                    <a class="hiddenanchor" id="tologin"></a>
-                    <div id="wrapper">
-                        <div id="login" class="animate form">
-                                <h1>Log in</h1> 
-                                <p> 
-                                    <label for="username" class="uname" > Your email or username </label>
-                                    <input id="username" name="username" required="required" type="text" placeholder="myusername or mymail@mail.com"/>
-                                </p>
-                                <p> 
-                                    <label for="password" class="youpasswd"> Your password </label>
-                                    <input id="password" name="password" required="required" type="password" placeholder="eg. X8df!90EO" /> 
-                                </p>
-                                <p>
-                                    <label for="teachpar" class="teachparr" id="isTeacher">Teacher:  </label> <input type="checkbox"></input>  <label for="parteach" class="parrteach">Student/Parent:  </label>  <input type="checkbox" id="isParent"></input> 
-                                <p class="keeplogin"> 
-									<input type="checkbox" name="loginkeeping" id="loginkeeping" value="loginkeeping" /> 
-									<label for="loginkeeping">Keep me logged in</label>
-								</p>
-                                <p class="login button"> 
-                                    <button id='log'>login</button> 
-								</p>
-                                <p class="change_link">
-									Not a member yet ?
-									<a href="#toregister" class="to_register">Join us</a>
-								</p>
-                        </div>
->>>>>>> origin/master
-
+    
 
 
     <!--[if lt IE 7 ]> <html lang="en" class="no-js ie6 lt8"> <![endif]-->
@@ -197,10 +146,9 @@
     <Br>
     <!--Footer-->
     <footer class="page-footer center-on-small-only primary-color-dark" id="footy">
-
         <div>
             <section id="contact" style="">
-                <div class="container">
+                <div class="container-fluid">
                     <div class="row">
                         <div class="picture" style="margin-bottom: 20px" style="margin-left: 20px"><img src="./images/peachertrans.png" width="30%" height="30%" style="float: left"></div>
                         <div class="col-md-5" style="margin-bottom: 20px;">
