--- a/public/index.html
+++ b/public/index.html
@@ -146,7 +146,7 @@
     <Br>
     <!--Footer-->
     <footer class="page-footer center-on-small-only primary-color-dark" id="footy">
-        <div>
+        <!--<div>
             <section id="contact" style="">
                 <div class="container-fluid">
                     <div class="row">
@@ -204,7 +204,17 @@
                 </div>
             </section>
 
-
+--><textarea> your message </textarea>
+<input type="text" placeholder="name" name="name" />
+<input type="text" placeholder="lastname" name="lastname" />
+<label>
+<input type="radio" name="rboption" value="yes" /> YES
+</label>
+<label>
+<input type="radio" name="rboption" value="no" />NO
+</label>
+<br>
+<a href="#" target="_blank" style="display:inline-block; background:#333; color:#FFF; padding:5px 10px 5px 10px; margin:15px 0 0 0; text-decoration:none" class="submit">Send the email</a>
 
     </footer>
     <!--/.Footer-->
