done did got the email box to w3rk

--- a/public/index.html
+++ b/public/index.html
@@ -70,7 +70,7 @@
                             <input id="password" name="password" required="required" type="password" placeholder="eg. X8df!90EO" />
                         </p>
                         <p>
-                            <label for="teachpar" class="label1" id="isTeacher">Teacher: </label><input type="checkbox" class="torp"></input>
+                            <label for="teachpar" class="label1" id="isTeacher">Teacher: </label><input type="checkbox" class="torp"></input><br>
                             <label for="parteach" class="label2">Student/Parent: </label>
                             <input type="checkbox" id="isParent"
                                 class="torp"></input>
@@ -146,7 +146,7 @@
     <Br>
     <!--Footer-->
     <footer class="page-footer center-on-small-only primary-color-dark" id="footy">
-        <!--<div>
+        <div>
             <section id="contact" style="">
                 <div class="container-fluid">
                     <div class="row">
@@ -182,7 +182,7 @@
                                         <div class="clearfix"></div>
                                         <div class="col-lg-12 text-center">
                                             <div id="success"></div>
-                                            <button type="submit" class="btn btn-xl get">Send Message</button>
+                                            <a href="#" target="_blank" style="display:inline-block; background:#333; color:#FFF; padding:5px 10px 5px 10px; margin:15px 0 0 0; text-decoration:none" class="submit" type="submit">Send the email</a>
                                         </div>
                                     </div>
                                 </form>
@@ -204,17 +204,14 @@
                 </div>
             </section>
 
---><textarea> your message </textarea>
+--><!--TESTING FOR NEW EMAIL SENDERRRRRRR-->
+
+<!--<textarea> Comments? Please send us a message. </textarea>
 <input type="text" placeholder="name" name="name" />
 <input type="text" placeholder="lastname" name="lastname" />
 <label>
-<input type="radio" name="rboption" value="yes" /> YES
-</label>
-<label>
-<input type="radio" name="rboption" value="no" />NO
-</label>
 <br>
-<a href="#" target="_blank" style="display:inline-block; background:#333; color:#FFF; padding:5px 10px 5px 10px; margin:15px 0 0 0; text-decoration:none" class="submit">Send the email</a>
+<a href="#" target="_blank" style="display:inline-block; background:#333; color:#FFF; padding:5px 10px 5px 10px; margin:15px 0 0 0; text-decoration:none" class="submit">Send the email</a>-->
 
     </footer>
     <!--/.Footer-->
