Fixed Footers. Updated links. Added SETTINGS and CLASS page.

--- a/public/class.html
+++ b/public/class.html
@@ -62,7 +62,7 @@
 
 
 <body><center>
-<div id='mainDiv' class='divvy'> Yo ! This is where some shit will go, bro! </div>
+<div id='mainDiv' class='divvy'> Yo ! I bet you want to read about your classes and shit, bro! </div>
 
 
     <center>
@@ -134,7 +134,7 @@
             </section>
     </footer>
     <script>
-    $.get('/api/student', function (res){
+    $.get('/api/class', function (res){
        var data = JSON.parse(res);
     });
     </script>
