--- a/public/settings.html
+++ b/public/settings.html
@@ -62,7 +62,7 @@
 
 
 <body><center>
-<div id='mainDiv' class='divvy'> Yo ! This is where some shit will go, bro! </div>
+<div id='mainDiv' class='divvy'> Yo ! This is where your settings shit will go, bro! </div>
 
 
     <center>
@@ -134,7 +134,7 @@
             </section>
     </footer>
     <script>
-    $.get('/api/student', function (res){
+    $.get('/api/teacher', function (res){
        var data = JSON.parse(res);
     });
     </script>
