--- a/public/parentprof.html
+++ b/public/parentprof.html
@@ -16,12 +16,14 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 <link rel="stylesheet" href="styles.css">
 <script src="fejs.js"></script>
+        <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+                    crossorigin="anonymous"></script>
 
 <!--<div class="container">
   <!-- Topper w/ logo -->
   <div class="row hidden-xs topper">
     <div class="col-xs-7 col-sm-7">
-      <a href="./index.html"><img am-TopLogo alt="SECUREVIEW"  src="./images/peachertrans.png" class="img-responsive"></a>
+      <a href="/index.html"><img am-TopLogo alt="SECUREVIEW"  src="/images/peachertrans.png" class="img-responsive"></a>
     </div>
     <div class="col-xs-5 col-xs-offset-1 col-sm-5 col-sm-offset-0 text-right ">
     </div>
@@ -38,7 +40,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand visible-xs-inline-block nav-logo" href="/"><img src="./images/peachertrans.png" class="img-responsive" alt=""></a>
+          <a class="navbar-brand visible-xs-inline-block nav-logo" href="/"><img src="/images/peachertrans.png" class="img-responsive" alt=""></a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
