--- a/public/teacherprof.html
+++ b/public/teacherprof.html
@@ -11,17 +11,20 @@
 
 <!-- Optional theme -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+<script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+                    crossorigin="anonymous"></script>
 
 <!-- Latest compiled and minified JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-<link rel="stylesheet" href="styles.css">
-<script src="fejs.js"></script>
+<link rel="stylesheet" href="/styles.css">
+<script src="/fejs.js"></script>
+        
 
 <!--<div class="container">
   <!-- Topper w/ logo -->
   <div class="row hidden-xs topper">
     <div class="col-xs-7 col-sm-7">
-      <a href="./index.html"><img am-TopLogo alt="SECUREVIEW"  src="./images/peachertrans.png" class="img-responsive"></a>
+      <a href="/"><img am-TopLogo alt="SECUREVIEW"  src=" /images/peachertrans.png" class="img-responsive"></a>
     </div>
     <div class="col-xs-5 col-xs-offset-1 col-sm-5 col-sm-offset-0 text-right ">
     </div>
@@ -38,16 +41,16 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand visible-xs-inline-block nav-logo" href="/"><img src="./images/peachertrans.png" class="img-responsive" alt=""></a>
+          <a class="navbar-brand visible-xs-inline-block nav-logo" href="/"><img src="/images/peachertrans.png" class="img-responsive" alt=""></a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse navbar-ex1-collapse">
           <ul class="nav navbar-nav js-nav-add-active-class">
-            <li><a href="./index.html">Home</a></li>
-            <li class="active"><a href="./parentprof.html">Profile</a></li>
-            <li><a href="./class.html">Class</a></li>
-            <li><a href="./settings.html">Settings</a></li>
+            <li><a href="/index.html">Home</a></li>
+            <li class="active"><a href="/parentprof.html">Profile</a></li>
+            <li><a href="/class.html">Class</a></li>
+            <li><a href="/settings.html">Settings</a></li>
               </ul>
             </li>
           </ul>
@@ -62,12 +65,12 @@
 
 
 <body><center>
-<div id='mainDiv' class='divvy'> Yo ! This is where some shit will go, bro! </div>
+<div id='mainDiv' class='divvy'> Yo !!!! This is where some shit will go, bro! </div>
 
 
     <center>
     <!--<img src="./images/peachertrans.png" width="75%" height="75%"><br>-->
-    <img src="./images/peachErty.png" width="50%" height="50%">
+    <img src="/images/peachErty.png" width="50%" height="50%">
     <br>
 
 
@@ -79,7 +82,7 @@
             <section id="contact" style="">
                 <div class="container-fluid">
                     <div class="row">
-                        <div class="picture" style="margin-bottom: 20px" style="margin-left: 20px"><img src="./images/peachertrans.png" width="30%" height="30%" style="float: left"></div>
+                        <div class="picture" style="margin-bottom: 20px" style="margin-left: 20px"><img src="/images/peachertrans.png" width="30%" height="30%" style="float: left"></div>
                         <div class="col-md-5" style="margin-bottom: 20px;">
                             <h1 style="color:#fff;">Have a comment? Please share!</h1><br><br>
                         </div>
