idk tried stuff

--- a/public/teacherprof.html
+++ b/public/teacherprof.html
@@ -139,6 +139,7 @@
     <script>
     $.get('/api/teacher', function (res){
        var data = JSON.parse(res);
+       console.log(data);
     });
     </script>
 </body>
