tried some stuff that didn't work . Also switched around the query of J

--- a/public/teacherprof.html
+++ b/public/teacherprof.html
@@ -138,8 +138,9 @@
     </footer>
     <script>
     $.get('/api/teacher', function (res){
+        console.log(res);
        var data = JSON.parse(res);
-       console.log(data);
+       
     });
     </script>
 </body>
