--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
         <img src="./images/peachErty.png" width="50%" height="50%">
         <br>
 
-    <div id='intro' class='divvy'>
+    <div id='intro'>
         Welcome to Peacher for parents and teachers! Peacher is an interactive program designed to maintain communication between
         parents and teachers. For parents - you can check grades, make sure your child is keeping up with assignments, and
         contact your child's teachers. For teachers - Peacher gives you the ability to submit grades, post assignments, and
