--- a/public/teacherprof.html
+++ b/public/teacherprof.html
@@ -28,7 +28,7 @@
                             display: table-cell;
                             border-right: 1px solid #000000;
                             border-bottom: 1px solid #000000;
-                            width: 30px;
+                            width: 100px;
                             height: 30px;
                         }
                         
@@ -192,20 +192,19 @@
 
             function addAssGrid(data)
             {
-
-
                 for (var a = 0; a < data.length; a++) 
                 {               
                     $('#' + (a+2) + 'x0').html(data[a].assignmentName);
 
                     for (var s = 0; s < data[a].students.length; s++) 
                     {
+                        $('#0x' + (s+1)).html(data[a].students[s].student);                        
                         $('#'+(a+2)+'x' + (s+1)).html(data[a].students[s].grade);
 
-                        if (a === 0) 
-                            {
-                                $('#0x' + (s+1)).html(data[a].students[s].student);
-                            }
+                        // if (a === 0) 
+                        //     {
+
+                            // }
                     }
                 }
                 var rows =  data[0].students.length+1;
@@ -223,6 +222,17 @@
                     }
                     $('#0x'+r).html(avG);  
                 }
+
+                var classAvg = parseFloat($('#1x1').text());
+
+                if (rows > 2)
+                {
+                    for (var r = 2; r < rows+1; r++) 
+                    {
+                        classAvg = classAvg + parseFloat($('#1x'+r).text());
+                    }   
+                }
+                $('#1x0').html(classAvg);  
             }
 
 
