fixed some stuff

--- a/public/index.html
+++ b/public/index.html
@@ -78,12 +78,12 @@
                                 <p class="login button">
                                     <button id='log'>login</button>
                                 </p>
-                                <p class="change_link">
+                                <!--<p class="change_link">
                                     Not a member yet ?
                                     <a href="#toregister" class="to_register">Join us</a>
-                                </p>
+                                </p>-->
                     </div>
-
+<!--
                     <div id="register" class="animate form">
                         <form autocomplete="on">
                             <h1> Sign up </h1>
@@ -125,7 +125,7 @@
                                 <a href="#tologin" class="to_register"> Go and log in </a>
                             </p>
                         </form>
-                    </div>
+                    </div>-->
 
                 </div>
             </div>
@@ -149,16 +149,16 @@
         <div>
             <section id="contact" style="">
                 <div class="container-fluid">
-                    <div class="row">
+                    <div class="roe">
                         <div class="picture" style="margin-bottom: 20px" style="margin-left: 20px"><img src="./images/peachertrans.png" width="30%" height="30%" style="float: left"></div>
                         <div class="col-md-5" style="margin-bottom: 20px;">
                             <h1 style="color:#fff;">Have a comment? Please share!</h1><br><br>
                         </div>
-                        <div class="row">
+                        <div class="roe">
 
                             <div class="col-md-8">
                                 <form name="sentMessage" id="contactForm" novalidate="">
-                                    <div class="row">
+                                    <div class="roe">
                                         <div class="col-md-6">
                                             <div class="form-group">
                                                 <input type="text" class="inputmessage" placeholder="Your Name " id="name" required="" data-validation-required-message="Please enter your name.">
