--- a/public/parentprof.html
+++ b/public/parentprof.html
@@ -82,68 +82,67 @@
 
 
         </center>
-        <!--Footer-->
-        <footer class="page-footer center-on-small-only primary-color-dark" id="footy">
-            <div>
-                <section id="contact" style="">
-                    <div class="container-fluid">
-                        <div class="row">
-                            <div class="picture" style="margin-bottom: 20px" style="margin-left: 20px"><img src="/images/peachertrans.png" width="30%" height="30%" style="float: left"></div>
-                            <div class="col-md-5" style="margin-bottom: 20px;">
-                                <h1 style="color:#fff;">Have a comment? Please share!</h1><br><br>
-                            </div>
-                            <div class="row">
+    <footer class="page-footer center-on-small-only primary-color-dark" id="footy">
+        <div>
+            <section id="contact" style="">
+                <div class="container-fluid">
+                    <div class="roe">
+                        <div class="picture" style="margin-bottom: 20px" style="margin-left: 20px"><img src="/images/peachertrans.png" width="30%" height="30%" style="float: left"></div>
+                        <div class="col-md-5" style="margin-bottom: 20px;">
+                            <h1 style="color:#fff;">Have a comment? Please share!</h1><br><br>
+                        </div>
+                        <div class="roe">
 
-                                <div class="col-md-8">
-                                    <form name="sentMessage" id="contactForm" novalidate="">
-                                        <div class="row">
-                                            <div class="col-md-6">
-                                                <div class="form-group">
-                                                    <input type="text" class="inputmessage" placeholder="Your Name *" id="name" required="" data-validation-required-message="Please enter your name.">
-                                                    <p class="help-block text-danger"></p>
-                                                </div>
-                                                <div class="form-group">
-                                                    <input type="email" class="inputmessage" placeholder="Your Email *" id="email" required="" data-validation-required-message="Please enter your email address.">
-                                                    <p class="help-block text-danger"></p>
-                                                </div>
-                                                <div class="form-group">
-                                                    <input type="tel" class="inputmessage" placeholder="Your Phone *" id="phone" required="" data-validation-required-message="Please enter your phone number.">
-                                                    <p class="help-block text-danger"></p>
-                                                </div>
+                            <div class="col-md-8">
+                                <form name="sentMessage" id="contactForm" novalidate="">
+                                    <div class="roe">
+                                        <div class="col-md-6">
+                                            <div class="form-group">
+                                                <input type="text" class="inputmessage" placeholder="Your Name " id="name" required="" data-validation-required-message="Please enter your name.">
+                                                <p class="help-block text-danger"></p>
                                             </div>
-                                            <div class="col-md-6">
-                                                <div class="form-group">
-                                                    <textarea class="inputmessage" placeholder="Your Message *" id="message" required="" data-validation-required-message="Please enter a message."></textarea>
-                                                    <p class="help-block text-danger"></p>
-                                                </div>
+                                            <div class="form-group">
+                                                <input type="email" class="inputmessage" placeholder="Your Email " id="email" required="" data-validation-required-message="Please enter your email address.">
+                                                <p class="help-block text-danger"></p>
                                             </div>
-                                            <div class="clearfix"></div>
-                                            <div class="col-lg-12 text-center">
-                                                <div id="success"></div>
-                                                <a href="#" target="_blank" style="display:inline-block; background:#333; color:#FFF; padding:5px 10px 5px 10px; margin:15px 0 0 0; text-decoration:none"
-                                                    class="submit" type="submit">Send the email</a>
+                                            <div class="form-group">
+                                                <input type="tel" class="inputmessage" placeholder="Your Phone " id="phone" required="" data-validation-required-message="Please enter your phone number.">
+                                                <p class="help-block text-danger"></p>
                                             </div>
                                         </div>
-                                    </form>
-                                </div>
-                                <div class="col-md-4">
-                                    <p style="color:#fff;">
-                                        <strong><i class="fa fa-map-marker"></i> Address</strong><br> 1600 Range St. Arapahoe
-                                        Ave. Boulder, CO 80303
-                                    </p>
-                                    <p style="color:#fff;"><strong><i class="fa fa-phone"></i> Phone Number</strong><br> 1-800-CODECRAFT extension:
-                                        ERTY
-                                    </p>
-                                    <p style="color:#fff;">
-                                        <strong><i class="fa fa-envelope"></i>  Email Address</strong><br> info@peacher.com
-                                    </p>
-                                    <p></p>
-                                </div>
+                                        <div class="col-md-6">
+                                            <div class="form-group">
+                                                <textarea class="inputmessage" placeholder="Your Message " id="message" required="" data-validation-required-message="Please enter a message."></textarea>
+                                                <p class="help-block text-danger"></p>
+                                            </div>
+                                        </div>
+                                        <div class="clearfix"></div>
+                                        <div class="col-lg-12 text-center">
+                                            <div id="success"></div>
+                                            <a href="#" target="_blank" style="display:inline-block; background:blanchedalmond; color: peru; padding:5px 10px 5px 10px; margin:55px 0 0 0; text-decoration:none" class="submit" type="submit">Send email</a>
+                                        </div>
+                                    </div>
+                                </form>
+                            </div>
+                            <div class="col-md-4">
+                                <p style="color:#fff;">
+                                    <strong><i class="fa fa-map-marker"></i> Address</strong><br> 1600 Range St. Arapahoe
+                                    Ave. Boulder, CO 80303
+                                </p>
+                                <p style="color:#fff;"><strong><i class="fa fa-phone"></i> Phone Number</strong><br> 1-800-CODECRAFT extension:
+                                    ERTY</p>
+                                <p style="color:#fff;">
+                                    <strong><i class="fa fa-envelope"></i>  Email Address</strong><br> info@peacher.com
+                                </p>
+                                <p></p>
                             </div>
                         </div>
                     </div>
-                </section>
-        </footer>
+                </div>
+            </section>
+            &copy; 2017 <i>Blanche d'Almond</i>
+    </footer>
+    <!--/.Footer-->
         <script>
 
     $.get('/api/student', function (res){
