--- a/public/teacherprof.html
+++ b/public/teacherprof.html
@@ -156,7 +156,7 @@
                     </div>
                 </div>
             </section>
-            &copy; 2017 <i>Blanche d'Almond</i>
+            &copy; 2017 <i>Blanché d'Almond</i>
     </footer>
         <script>
             ////////
