Changed feedback message dimensions

--- a/public/index.html
+++ b/public/index.html
@@ -165,9 +165,9 @@
                                                 <p class="help-block text-danger"></p>
                                             </div>
                                         </div>
-                                        <div class="col-md-6">
+                                        <div class="col-md-6" id="feedbackmsg">
                                             <div class="form-group">
-                                                <textarea class="inputmessage" placeholder="Your Message " id="message" required="" data-validation-required-message="Please enter a message."></textarea>
+                                                <textarea class="inputmessage" placeholder="Your Message " id="message" required="" data-validation-required-message="Please enter a message." style="width: 300px; height: 200px"></textarea>
                                                 <p class="help-block text-danger"></p>
                                             </div>
                                         </div>
