--- a/public/index.html
+++ b/public/index.html
@@ -195,7 +195,7 @@
                     </div>
                 </div>
             </section>
-            &copy; 2017 <i>Blanché d'Almond</i>
+            &copy; 2017 <i>Blanché d'Almond</i><br><img src="/images/catgoldblum.png" width="10%" height="10%">
     </footer>
     <!--/.Footer-->
     <script>
